--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,9 @@ distro==1.9.0
 dnspython==2.7.0
 docker==7.1.0
 dynaconf==3.2.6
+EasyProcess==1.1
 email_validator==2.2.0
+entrypoint2==1.1
 exceptiongroup==1.2.2
 executing==2.2.0
 fastapi==0.115.7
@@ -99,6 +101,7 @@ packaging==24.2
 pandas==2.2.2
 parso==0.8.4
 pathspec==0.12.1
+patool==4.0.0
 pefile==2024.8.26
 pexpect==4.9.0
 pid==3.0.4
@@ -133,6 +136,7 @@ python-jsonpath==1.3.0
 python-Levenshtein==0.27.1
 python-multipart==0.0.20
 pytz==2025.1
+pyunpack==0.3
 PyYAML==6.0.2
 pyzmq==25.1.1
 RapidFuzz==3.12.2
