--- a/requirements.txt
+++ b/requirements.txt
@@ -1,187 +1,7 @@
-aiofiles==24.1.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.13
-aiosignal==1.3.2
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.8.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.8.1
-asttokens==3.0.0
-asyncache==0.3.1
-attrs==25.1.0
-azure-core==1.32.0
-azure-storage-blob==12.19.1
-bcrypt==4.1.2
-blinker==1.9.0
-boto3==1.34.56
-botocore==1.34.162
-bracex==2.5.post1
-cachetools==5.5.2
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-comm==0.2.2
-contourpy==1.3.1
-croniter==6.0.0
-cryptography==44.0.2
-curl_cffi==0.10.0
-cycler==0.12.1
-decorator==5.2.1
-Deprecated==1.2.18
-distro==1.9.0
-dnspython==2.7.0
-docker==7.1.0
-dynaconf==3.2.6
-EasyProcess==1.1
-email_validator==2.2.0
-entrypoint2==1.1
-exceptiongroup==1.2.2
-executing==2.2.0
-fastapi==0.115.7
-filelock==3.18.0
-fonttools==4.56.0
-forbiddenfruit==0.1.4
-frozenlist==1.5.0
-fuzzywuzzy==0.18.0
-gitdb==4.0.11
-GitPython==3.1.41
-googleapis-common-protos==1.69.1
-greenlet==3.1.1
-grpcio==1.71.0
-gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.7
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-importlib_metadata==8.5.0
-ipython==8.26.0
-ipywidgets==8.1.2
-isodate==0.7.2
-itables==1.7.1
-jedi==0.19.2
-Jinja2==3.1.5
-jmespath==1.0.1
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyterlab_widgets==3.0.13
-kiwisolver==1.4.8
-kr8s==0.13.5
-Levenshtein==0.27.1
-linkify-it-py==2.0.3
-loguru==0.7.3
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.0
-matplotlib-inline==0.1.7
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-msgpack==1.1.0
-multidict==6.1.0
-narwhals==1.30.0
-nh3==0.2.17
-numpy==1.24.4
-opentelemetry-api==1.29.0
-opentelemetry-exporter-otlp-proto-common==1.29.0
-opentelemetry-exporter-otlp-proto-grpc==1.29.0
-opentelemetry-instrumentation==0.50b0
-opentelemetry-instrumentation-asgi==0.50b0
-opentelemetry-instrumentation-dbapi==0.50b0
-opentelemetry-instrumentation-fastapi==0.50b0
-opentelemetry-instrumentation-sqlite3==0.50b0
-opentelemetry-proto==1.29.0
-opentelemetry-sdk==1.29.0
-opentelemetry-semantic-conventions==0.50b0
-opentelemetry-util-http==0.50b0
-packaging==24.2
-pandas==2.2.2
-parso==0.8.4
-pathspec==0.12.1
-patool==4.0.0
+streamlit==1.32.2
+pandas==2.2.1
+numpy==1.26.4
 pefile==2024.8.26
-pexpect==4.9.0
-pid==3.0.4
-pillow==11.1.0
-platformdirs==4.3.6
-prompt_toolkit==3.0.50
-propcache==0.3.0
-protobuf==5.29.3
-psutil==6.1.1
-psycopg==3.1.19
-psycopg-binary==3.1.19
-psycopg-pool==3.2.6
-psycopg2-binary==2.9.9
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py_fast_rsync==0.1.0
-pyarrow==17.0.0
-pycapnp==2.0.0
-pycparser==2.22
-pydantic==2.10.6
-pydantic-settings==2.7.1
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.19.1
-PyJWT==2.10.1
-PyNaCl==1.5.0
-pyparsing==3.2.1
-python-box==7.3.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-jsonpath==1.3.0
-python-Levenshtein==0.27.1
-python-multipart==0.0.20
-pytz==2025.1
-pyunpack==0.3
-PyYAML==6.0.2
-pyzmq==25.1.1
-RapidFuzz==3.12.2
-referencing==0.36.2
-requests==2.32.3
-RestrictedPython==7.0
-rich==13.9.4
-rpds-py==0.23.1
-s3transfer==0.10.4
-shellingham==1.5.4
-sherlock==0.4.1
-six==1.17.0
-smmap==5.0.1
-sniffio==1.3.1
-SQLAlchemy==2.0.32
-stack-data==0.6.3
-starlette==0.45.3
-streamlit==1.43.2
-syft==0.9.5
-syft-core==0.1.0
-syft-event==0.1.0
-syft-rpc==0.1.0
-syftbox==0.3.5
-tenacity==8.3.0
-textual==2.1.2
-toml==0.10.2
-tomli==2.0.1
-tomli_w==1.0.0
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-typeguard==4.1.5
-typer==0.15.1
-typing_extensions==4.12.2
-tzdata==2025.1
-uc-micro-py==1.0.3
-urllib3==2.3.0
-uvicorn==0.34.0
-uvloop==0.21.0
-watchdog==6.0.0
-watchfiles==1.0.4
-wcmatch==10.0
-wcwidth==0.2.13
-websockets==15.0.1
-widgetsnbextension==4.0.13
-wrapt==1.17.2
-yarl==1.18.3
-zipp==3.21.0
+GitPython==3.1.42
+rapidfuzz==3.6.1
+requests==2.31.0
