--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,9 @@ fuzzywuzzy==0.18.0
 python-Levenshtein==0.27.1
 py7zr==0.20.8
 pefile==2024.8.26
+fastapi
+uvicorn
+requests
+pydantic
+python-multipart
 
