--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,33 @@
-streamlit
-pefile
-pandas
-jsonschema
-requests
-datasets
+# Core Web Framework
 fastapi
 uvicorn[standard]
-pefile
-numpy
-scipy
-scikit-learn
-PyYAML
-pygments
-pycryptodome
-fuzzywuzzy
-python-Levenshtein
 streamlit==1.32.2
+
+# SBOM-related + file processing
+pefile==2024.8.26
+py7zr==0.20.8
+
+# Data Handling
 pandas==2.2.1
 numpy==1.26.4
-pefile==2024.8.26
-GitPython==3.1.42
-requests==2.31.0
-fuzzywuzzy==0.18.0
-python-Levenshtein==0.27.1
-py7zr==0.20.8
-pefile==2024.8.26
-fastapi
-requests
+scikit-learn
+scipy
 pydantic
 python-multipart
-fastapi
-uvicorn[standard]
-pefile
+PyYAML
+
+# NLP & Fuzzy Matching
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.27.1
+
+# Requests and APIs
+requests==2.31.0
+jsonschema
+GitPython==3.1.42
+datasets
+
+# Extra utilities
+pygments
+pycryptodome
+
 
