--- a/requirements.txt
+++ b/requirements.txt
@@ -1,286 +1,21 @@
-aiofiles==24.1.0
-aiohappyeyeballs==2.4.6
-aiohttp==3.11.13
-aiosignal==1.3.2
-alembic==1.15.1
-altair==5.5.0
-altgraph==0.17.4
-anaconda-anon-usage @ file:///C:/b/abs_c3w_h1zzjg/croot/anaconda-anon-usage_1710965204622/work
-analyzer==0.1.1
-analyzerdam==0.1.2
-analyzerstrategies==0.1.5
-annotated-types==0.7.0
-anyio==4.8.0
-app==0.0.1
-archspec @ file:///croot/archspec_1709217642129/work
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.8.1
-asttokens==3.0.0
-asyncache==0.3.1
-attrs==24.3.0
-azure-core==1.32.0
-azure-storage-blob==12.19.1
-babel==2.17.0
-bcrypt==4.1.2
-beartype==0.20.0
-beautifulsoup4==4.13.3
-blinker==1.9.0
-boltons @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/boltons_1699480450092/work
-boolean.py==4.0
-boto3==1.34.56
-botocore==1.34.162
-bracex==2.5.post1
-Brotli==1.1.0
-cachetools==5.5.0
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1739515848642/work/certifi
-cffi @ file:///C:/b/abs_90yq4lmu83/croot/cffi_1726856448345/work
-chardet==5.2.0
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-click==8.1.8
-colorama @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/colorama_1699472650914/work
-comm==0.2.2
-conda @ file:///D:/bld/conda_1739917047096/work
-conda-content-trust @ file:///C:/b/abs_bdfatn_wzf/croot/conda-content-trust_1714483201909/work
-conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1727775630457/work/src
-conda-package-handling @ file:///C:/b/abs_831_pypuuz/croot/conda-package-handling_1718138287790/work
-conda_package_streaming @ file:///C:/b/abs_fe6zb0_j8_/croot/conda-package-streaming_1718136098642/work
-contourpy==1.3.1
-croniter==6.0.0
-cryptography @ file:///C:/b/abs_35g500qir4/croot/cryptography_1724940575116/work
-curl_cffi==0.9.0
-cycler==0.12.1
-cyclonedx-bom==5.3.0
-cyclonedx-python-lib==9.1.0
-decorator==5.2.1
-defusedxml==0.7.1
-Deprecated==1.2.18
-distro @ file:///C:/b/abs_71xr36ua5r/croot/distro_1714488282676/work
-Django==5.1.4
-dnspython==2.7.0
-docker==7.1.0
-dynaconf==3.2.6
-elementpath==4.8.0
-email_validator==2.2.0
-executing==2.2.0
-fastapi==0.115.7
-filelock==3.16.1
-Flask==2.2.3
-fonttools==4.55.0
-forbiddenfruit==0.1.4
-fqdn==1.5.1
-frozendict @ file:///C:/b/abs_2alamqss6p/croot/frozendict_1713194885124/work
-frozenlist==1.5.0
-fsspec==2024.10.0
-fuzzywuzzy==0.18.0
-gitdb==4.0.12
-GitPython==3.1.44
-googleapis-common-protos==1.69.0
-googlefinance==0.7
-graphviz==0.20.3
-greenlet==3.1.1
-grpcio==1.70.0
-gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.7
-httptools==0.6.4
-httpx==0.28.1
-huggingface-hub==0.27.1
-idna @ file:///C:/b/abs_aad84bnnw5/croot/idna_1714398896795/work
-importlib_metadata==8.5.0
-inflate64==1.0.1
-intel-openmp==2021.4.0
-ipython==8.26.0
-ipywidgets==8.1.2
-isodate==0.7.2
-isoduration==20.11.0
-itables==1.7.1
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.5
-jiter==0.8.2
-jmespath==1.0.1
-joblib==1.4.2
-jsonpatch @ file:///C:/b/abs_4fdm88t7zi/croot/jsonpatch_1714483974578/work
-jsonpointer==2.1
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyterlab_widgets==3.0.13
-kiwisolver==1.4.7
-kr8s==0.13.5
-Levenshtein @ file:///D:/bld/levenshtein_1741007173788/work
-libmambapy @ file:///C:/b/abs_aam1usey89/croot/mamba-split_1725563515831/work/libmambapy
-license-expression==30.4.1
-linkify-it-py==2.0.3
-loguru==0.7.3
-lxml==5.3.1
-Mako==1.3.9
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.0
-matplotlib-inline==0.1.7
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-menuinst @ file:///C:/b/abs_76jwd47ck1/croot/menuinst_1723567618942/work
-mkl==2021.4.0
-mox==0.5.3
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==6.1.0
-multivolumefile==0.2.3
-narwhals==1.21.0
-networkx==3.4.2
-nh3==0.2.17
+fastapi
+uvicorn[standard]
+streamlit==1.32.2
+pandas==2.2.1
 numpy==1.26.4
-openai==1.59.3
-opentelemetry-api==1.29.0
-opentelemetry-exporter-otlp-proto-common==1.29.0
-opentelemetry-exporter-otlp-proto-grpc==1.29.0
-opentelemetry-instrumentation==0.50b0
-opentelemetry-instrumentation-asgi==0.50b0
-opentelemetry-instrumentation-dbapi==0.50b0
-opentelemetry-instrumentation-fastapi==0.50b0
-opentelemetry-instrumentation-sqlite3==0.50b0
-opentelemetry-proto==1.29.0
-opentelemetry-sdk==1.29.0
-opentelemetry-semantic-conventions==0.50b0
-opentelemetry-util-http==0.50b0
-packageurl-python==0.16.0
-packaging @ file:///C:/b/abs_c3vlh0z4jw/croot/packaging_1720101866539/work
-pandas==2.2.2
-parso==0.8.4
-pathspec==0.12.1
-pbr==1.6.0
-pefile==2023.2.7
-pid==3.0.4
-pillow==11.0.0
-pip-requirements-parser==32.0.1
-platformdirs @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/platformdirs_1701797392447/work
-pluggy @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pluggy_1699472504117/work
-ply==3.11
-prompt_toolkit==3.0.50
-propcache==0.3.0
-protobuf==5.29.2
-psutil==6.1.1
-psycopg==3.1.19
-psycopg-binary==3.1.19
-psycopg-pool==3.2.6
-psycopg2-binary==2.9.9
-pure_eval==0.2.3
-py-moneyed==3.0
-py-serializable==2.0.0
-py7zr==0.22.0
-py_fast_rsync==0.1.0
-pyarrow==17.0.0
-pybcj==1.0.3
-pycapnp==2.0.0
-pycosat @ file:///C:/b/abs_5csdern___/croot/pycosat_1714513102923/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pycryptodomex==3.21.0
-pydantic==2.10.6
-pydantic-settings==2.7.1
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.19.1
-pyinstaller==6.11.1
-pyinstaller-hooks-contrib==2024.10
-PyJWT==2.10.1
-PyNaCl==1.5.0
-pyparsing==3.2.0
-pyppmd==1.1.1
-PySocks @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pysocks_1699473336188/work
-pystock==0.1.6
-python-box==7.3.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-jsonpath==1.3.0
-python-Levenshtein @ file:///home/conda/feedstock_root/build_artifacts/python-levenshtein_1741044520443/work
-python-multipart==0.0.20
-pytz==2024.2
-pywin32==308
-pywin32-ctypes==0.2.3
-PyYAML==6.0.2
-pyzmq==25.1.1
-pyzstd==0.16.2
-RapidFuzz @ file:///D:/bld/rapidfuzz_1740954201717/work
-rdflib==7.1.3
-referencing==0.35.1
-regex==2024.11.6
-requests @ file:///C:/b/abs_9frifg92q2/croot/requests_1721410901096/work
-RestrictedPython==7.0
-rfc3339-validator==0.1.4
-rfc3987==1.3.8
-rich==13.9.4
-rpds-py==0.22.3
-ruamel.yaml @ file:///C:/b/abs_0cunwx_ww6/croot/ruamel.yaml_1727980181547/work
-ruamel.yaml.clib @ file:///C:/b/abs_5fk8zi6n09/croot/ruamel.yaml.clib_1727769837359/work
-s3transfer==0.10.4
-safetensors==0.5.0
-sbom==2023.10.7
-scikit-learn==1.6.1
-scipy==1.15.1
-semantic-version==2.10.0
-setuptools==75.5.0
-shellingham==1.5.4
-sherlock==0.4.1
-six==1.16.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
-spdx-tools==0.8.3
-SQLAlchemy==2.0.32
-sqlparse==0.5.3
-stack-data==0.6.3
-starlette==0.45.3
-streamlit==1.41.1
-syft-core==0.1.0
-syft-event==0.1.0
-syft-rpc==0.1.0
-syftbox==0.3.5
-sympy==1.13.3
-tbb==2021.13.1
-tenacity==8.3.0
-texttable==1.7.0
-textual==2.1.2
-threadpoolctl==3.5.0
-tokenizers==0.21.0
-toml==0.10.2
-tomli==2.0.1
-tomli_w==1.0.0
-torch==2.3.1
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.47.1
-truststore @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/truststore_1701881385424/work
-typeguard==4.1.5
-typer==0.15.1
-types-python-dateutil==2.9.0.20241206
-typing_extensions==4.12.2
-tzdata==2024.2
-uc-micro-py==1.0.3
-uri-template==1.3.0
-uritools==4.0.3
-urllib3 @ file:///C:/b/abs_9a_f8h_bn2/croot/urllib3_1727769836930/work
-uv==0.6.8
-uvicorn==0.34.0
-watchdog==6.0.0
-watchfiles==1.0.4
-wcmatch==10.0
-wcwidth==0.2.13
-webcolors==24.11.1
-websockets==15.0
-Werkzeug==3.1.3
-wheel==0.44.0
-widgetsnbextension==4.0.13
-win-inet-pton @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/win_inet_pton_1699472992992/work
-win32_setctime==1.2.0
-wrapt==1.17.2
-xmlschema==3.4.3
-xmltodict==0.14.2
-yarl==1.18.3
-zipp==3.21.0
-zstandard @ file:///C:/b/abs_82dff2ths3/croot/zstandard_1728569207191/work
+pefile==2024.8.26
+GitPython==3.1.42
+requests==2.31.0
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.27.1
+py7zr==0.20.8
+scikit-learn
+scipy
+jsonschema
+datasets
+PyYAML
+pygments==2.19.1
+python-multipart
+rich==13.7.1
+markdown-it-py==3.0.0
+mdurl==0.1.2
